--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue trailer tabletl-trailer--xlarge">XXX<span class="text-size--19 tabletp-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
+							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue trailer tabletl-trailer--xlarge">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
 						</div>
 						<p class="text-size--11 text-legal"><span class="tablet-hidden display--block">Free delivery on all phones</span> Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 					</div>
