--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	</div>
 	<div class="container">
 		<div class="grid-row--gutter-small">
-			<div class="col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+			<div class="col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
 				<a href="#" class="content-block content-block--medium grid-row--gutter-none">
 					<div class="col-hg-6 padding-toright tabletp-padding-toright--none image-area">
 						<div class="image-holder">
@@ -91,7 +91,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
@@ -113,7 +113,7 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
@@ -135,7 +135,7 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
@@ -157,7 +157,7 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
@@ -179,7 +179,7 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-md-6 grid-row--gutter-none content-block--wide">
+			<div class="col-md-6 grid-row--gutter-none content-block--wide animated">
 				<a href="#" class="col-xs content-block content-block__banner grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-01.jpg);">
 					<div class="col-xs">
 						<strong class="text-size--13">FAMILYOFFER</strong>
@@ -189,11 +189,11 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-xs-12 grid-row--gutter-none content-block--wide">
+			<div class="col-xs-12 grid-row--gutter-none content-block--wide animated">
 				<a href="#" class="col-xs content-block content-block__banner--large content-block__video-banner grid-row--gutter-none grid-row-lg--middle grid-row-xs--bottom grid-row-xs--center padding-whole--xxlarge mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-02.jpg)">
 					<div class="video-background">
-						<video autoplay loop muted>
-							<source type="video/mp4" src="https://player.vimeo.com/external/184848528.hd.mp4?s=1bdb5ad66c5eaa8c17d344115871ed4de14c110f&profile_id=174">
+						<video autoplay loop muted controls>
+							<source type="video/mp4" src="https://player.vimeo.com/external/184862802.hd.mp4?s=2f40bc3e5491efdd0fd672ca0867ab206a3bdd0a&profile_id=174">
 						</video>
 					</div>
 					<div class="col-hg-8 col-lg-10 banner-content">
@@ -205,12 +205,12 @@
 					<p class="text-size--11 color-white banner-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
 				<a href="#" class="content-block content-block--large grid-row--gutter-none">
 					<div class="col-hg-6 bundle-content tabletl-text--center">
 						<div class="description">
 							<strong class="text-size--13 tablet-hidden">BUNDLE</strong>
-							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Sony Xperia X Compact <span class="tablet-hidden">with headset</span></h2>
+							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Sony Xperia X Compact with headset</h2>
 							<p class="text-size--19 tablet-hidden">Buy the new Sony Xperia phone and get a pair of Sony headphones with you.</p>
 						</div>
 						<div class="price-box">
@@ -226,7 +226,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
@@ -248,7 +248,7 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-9 col-md-6 grid-row--gutter-none content-block--wide">
+			<div class="col-hg-9 col-md-6 grid-row--gutter-none content-block--wide animated">
 				<a href="#" class="col-xs content-block content-block__banner paddding-whole--xxlarge grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-03.jpg)">
 					<div class="col-xs">
 						<strong class="text-size--13">SUBSCRIPTIONS</strong>
@@ -258,7 +258,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
 				<div class="content-block content-block--small">
 					<h3 class="text-size--28 trailer">Find mobile</h3>
 					<div class="separator trailer"></div> 
@@ -275,5 +275,22 @@
 		</div>
 	</div>
 </div>
+<script>
+	document.addEventListener("DOMContentLoaded", function(event) { 
+		var animatedBlock = document.querySelectorAll(".animated");
+
+		animatedBlock.forEach(addClassIfVisible);
+
+		window.addEventListener("scroll", function(){
+			animatedBlock.forEach(addClassIfVisible)
+		});
+
+		function addClassIfVisible(el){
+			if(el.getBoundingClientRect().top - window.innerHeight <= 0) {
+				el.classList.add("block-visible");
+			}
+		}
+	});
+ </script>
 </body>
 </html>
