--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	</div>
 	<div class="container">
 		<div class="grid-row--gutter-small">
-			<div class="col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--medium grid-row--gutter-none">
 					<div class="col-hg-6 padding-toright tabletp-padding-toright--none image-area">
 						<div class="image-holder">
@@ -91,7 +91,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
@@ -113,7 +113,7 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
@@ -135,7 +135,7 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
@@ -157,7 +157,7 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
@@ -179,7 +179,7 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-md-6 grid-row--gutter-none content-block--wide animated">
+			<div class="col-md-6 grid-row--gutter-none content-block--wide">
 				<a href="#" class="col-xs content-block content-block__banner grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-01.jpg);">
 					<div class="col-xs">
 						<strong class="text-size--13">FAMILYOFFER</strong>
@@ -189,7 +189,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-xs-12 grid-row--gutter-none content-block--wide animated">
+			<div class="col-xs-12 grid-row--gutter-none content-block--wide">
 				<a href="#" class="col-xs content-block content-block__banner--large content-block__video-banner grid-row--gutter-none grid-row-lg--middle grid-row-xs--bottom grid-row-xs--center padding-whole--xxlarge mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-02.jpg)">
 					<div class="video-background">
 						<video autoplay loop muted controls>
@@ -205,7 +205,7 @@
 					<p class="text-size--11 color-white banner-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--large grid-row--gutter-none">
 					<div class="col-hg-6 bundle-content tabletl-text--center">
 						<div class="description">
@@ -226,7 +226,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
@@ -248,7 +248,7 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-9 col-md-6 grid-row--gutter-none content-block--wide animated">
+			<div class="col-hg-9 col-md-6 grid-row--gutter-none content-block--wide">
 				<a href="#" class="col-xs content-block content-block__banner paddding-whole--xxlarge grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-03.jpg)">
 					<div class="col-xs">
 						<strong class="text-size--13">SUBSCRIPTIONS</strong>
@@ -258,7 +258,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall animated">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<div class="content-block content-block--small">
 					<h3 class="text-size--28 trailer">Find mobile</h3>
 					<div class="separator trailer"></div> 
@@ -275,22 +275,5 @@
 		</div>
 	</div>
 </div>
-<script>
-	document.addEventListener("DOMContentLoaded", function(event) { 
-		var animatedBlock = document.querySelectorAll(".animated");
-
-		animatedBlock.forEach(addClassIfVisible);
-
-		window.addEventListener("scroll", function(){
-			animatedBlock.forEach(addClassIfVisible)
-		});
-
-		function addClassIfVisible(el){
-			if(el.getBoundingClientRect().top - window.innerHeight <= 0) {
-				el.classList.add("block-visible");
-			}
-		}
-	});
- </script>
 </body>
 </html>
