--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
 	<div class="container">
 		<div class="grid-row--gutter-small">
 			<div class="col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<a href="#" class="content-block content-block--medium grid-row--gutter-none">
-					<div class="col-hg-6 padding-toright tabletp-padding-toright--none image-area">
+				<div class="content-block content-block--medium grid-row--gutter-none">
+					<div class="col-hg-6 padding-toright tabletl-padding-toright--none image-area">
 						<div class="image-holder">
 							<img class="item-image" src="phone-01.jpg" alt="">
 							<div class="sticker-holder"><img class="sticker" src="splash.png" alt="sticker"></div>
 						</div>
 					</div>
-					<div class="col-hg-6 tabletl-text--center padding-trailer--large">
+					<div class="col-hg-6 tabletl-text--center padding-trailer--large tabletl-padding-trailer--none">
 						<div class="description">
 							<ul class="colors desktoplg-hidden">
 								<li class="gray"></li>
@@ -83,13 +83,13 @@
 								<li>Roam Away i 36 lande</li>
 							</ul>
 						</div>
-						<div class="price-box">
+						<div class="price-box trailer">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue trailer tabletl-trailer--xlarge">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
+							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
 						</div>
-						<p class="text-size--11 text-legal"><span class="tablet-hidden display--block">Free delivery on all phones</span> Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 					</div>
-				</a>
+					<p class="col-hg-6 text-size--11 text-legal"><span class="tablet-hidden display--block">Free delivery on all phones</span> Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+				</div>
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--small">
@@ -104,11 +104,9 @@
 						<li class="red"></li>
 						<li class="green"></li>
 					</ul>
-					<div class="description">
-						<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
-						<div class="price-box">
-							<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
-						</div>
+					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
+					<div class="price-box trailer">
+						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
 					</div>
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
@@ -126,11 +124,9 @@
 						<li class="red"></li>
 						<li class="green"></li>
 					</ul>
-					<div class="description">
-						<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
-						<div class="price-box">
-							<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
-						</div>
+					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
+					<div class="price-box">
+						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
 					</div>
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
@@ -148,11 +144,9 @@
 						<li class="red"></li>
 						<li class="green"></li>
 					</ul>
-					<div class="description">
-						<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
-						<div class="price-box">
-							<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
-						</div>
+					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
+					<div class="price-box trailer">
+						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
 					</div>
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
@@ -170,11 +164,9 @@
 						<li class="red"></li>
 						<li class="green"></li>
 					</ul>
-					<div class="description">
-						<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
-						<div class="price-box">
-							<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
-						</div>
+					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
+					<div class="price-box trailer">
+						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
 					</div>
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
@@ -192,7 +184,7 @@
 			<div class="col-xs-12 grid-row--gutter-none content-block--wide">
 				<a href="#" class="col-xs content-block content-block__banner--large content-block__video-banner grid-row--gutter-none grid-row-lg--middle grid-row-xs--bottom grid-row-xs--center padding-whole--xxlarge mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-02.jpg)">
 					<div class="video-background">
-						<video autoplay loop muted controls>
+						<video autoplay loop muted>
 							<source type="video/mp4" src="https://player.vimeo.com/external/184862802.hd.mp4?s=2f40bc3e5491efdd0fd672ca0867ab206a3bdd0a&profile_id=174">
 						</video>
 					</div>
@@ -207,18 +199,18 @@
 			</div>
 			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="content-block content-block--large grid-row--gutter-none">
-					<div class="col-hg-6 bundle-content tabletl-text--center">
+					<div class="col-hg-6 bundle-content tabletl-text--center padding-trailer--large tabletl-padding-trailer--none">
 						<div class="description">
 							<strong class="text-size--13 tablet-hidden">BUNDLE</strong>
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Sony Xperia X Compact with headset</h2>
 							<p class="text-size--19 tablet-hidden">Buy the new Sony Xperia phone and get a pair of Sony headphones with you.</p>
 						</div>
-						<div class="price-box">
+						<div class="price-box trailer">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue trailer tabletl-trailer--xlarge">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
+							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
 						</div>
-						<p class="text-size--11 text-legal"><span class="tablet-hidden display--block">Free delivery on all phones</span> Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 					</div>
+					<p class="col-hg-6 text-size--11 text-legal"><span class="tablet-hidden display--block">Free delivery on all phones</span> Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 					<div class="col-hg-7 bundle-image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="Bundle-test.png" alt="">
@@ -239,11 +231,9 @@
 						<li class="red"></li>
 						<li class="green"></li>
 					</ul>
-					<div class="description">
-						<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
-						<div class="price-box">
-							<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
-						</div>
+					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
+					<div class="price-box trailer">
+						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
 					</div>
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
