--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		.border-width-2:after {
 			border-width: 2px;
 		}
-		.button--action {
+		/*.button--action {
 			background: -moz-linear-gradient(top,  #029df0 0%, #038cd6 100%); 
 			background: -webkit-linear-gradient(top,  #029df0 0%,#038cd6 100%);
 			background: linear-gradient(to bottom,  #029df0 0%,#038cd6 100%); 
@@ -31,8 +31,8 @@
 		.button--action:hover {
 			background: -moz-linear-gradient(top,  #028cd6 0%, #027bbd 100%); 
 			background: -webkit-linear-gradient(top,  #028cd6 0%,#027bbd 100%);
-			background: linear-gradient(to bottom,  #028cd6 0%,#027bbd 100%); 
-		}
+			background: linear-gradient(to bottom,  #028cd6 0%,#027bbd 100%);
+		}*/
 	</style>
 </head>
 <body>
@@ -65,9 +65,9 @@
 				<div class="content-block content-block--medium grid-row--gutter-none">
 					<div class="col-hg-6 padding-toright tabletl-padding-toright--none image-area">
 						<div class="image-holder">
-							<img class="item-image" src="phone-01.jpg" alt="">
-							<div class="sticker-holder"><img class="sticker" src="splash.png" alt="sticker"></div>
+							<img src="phone-01.jpg" alt="">
 						</div>
+						<img class="sticker" src="splash.png" alt="sticker">
 					</div>
 					<div class="col-hg-6 tabletl-text--center padding-trailer--large tabletl-padding-trailer--none">
 						<div class="description">
@@ -95,9 +95,9 @@
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
-							<img class="item-image" src="phone-01.jpg" alt="">
-							<img class="sticker" src="splash.png" alt="sticker">
+							<img src="hphones.png" alt="">
 						</div>
+						<img class="sticker" src="splash.png" alt="sticker">
 					</div>
 					<ul class="colors">
 						<li class="gray"></li>
@@ -115,9 +115,9 @@
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
-							<img class="item-image" src="phone-01.jpg" alt="">
-							<img class="sticker" src="splash.png" alt="sticker">
+							<img src="phone-01.jpg" alt="">
 						</div>
+						<img class="sticker" src="splash.png" alt="sticker">
 					</div>
 					<ul class="colors">
 						<li class="gray"></li>
@@ -135,9 +135,9 @@
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
-							<img class="item-image" src="phone-01.jpg" alt="">
-							<img class="sticker" src="splash.png" alt="sticker">
+							<img src="phone-01.jpg" alt="">
 						</div>
+						<img class="sticker" src="splash.png" alt="sticker">
 					</div>
 					<ul class="colors">
 						<li class="gray"></li>
@@ -155,9 +155,9 @@
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
-							<img class="item-image" src="phone-01.jpg" alt="">
-							<img class="sticker" src="splash.png" alt="sticker">
+							<img src="phone-01.jpg" alt="">
 						</div>
+						<img class="sticker" src="splash.png" alt="sticker">
 					</div>
 					<ul class="colors">
 						<li class="gray"></li>
@@ -222,9 +222,9 @@
 				<a href="#" class="content-block content-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
-							<img class="item-image" src="phone-01.jpg" alt="">
-							<img class="sticker" src="splash.png" alt="sticker">
+							<img src="phone-01.jpg" alt="">
 						</div>
+						<img class="sticker" src="splash.png" alt="sticker">
 					</div>
 					<ul class="colors">
 						<li class="gray"></li>
