--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 								<li class="red"></li>
 								<li class="green"></li>
 							</ul>
-							<span class="text-size--13 font-roboto tablet-hidden">TEASER HEADER</span>
+							<span class="text-size--13 text-bold font-roboto tablet-hidden">TEASER HEADER</span>
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Product title</h2>
 							<ul class="list list--check tablet-hidden text-size--16">
 								<li>Free USP Episerver text here</li>
@@ -324,7 +324,7 @@
 								<li class="red"></li>
 								<li class="green"></li>
 							</ul>
-							<span class="text-size--13 font-roboto tablet-hidden">TEASER HEADER</span>
+							<span class="text-size--13 text-bold font-roboto tablet-hidden">TEASER HEADER</span>
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Product title</h2>
 							<p class="tablet-hidden">Free Episerver text description. Here you can write whatever you want to, it could be something about the terminal. Be creative :-)</p>
 						</div>
@@ -356,7 +356,7 @@
 								<li class="red"></li>
 								<li class="green"></li>
 							</ul>
-							<span class="text-size--13 font-roboto tablet-hidden">TEASER HEADER</span>
+							<span class="text-size--13 text-bold font-roboto tablet-hidden">TEASER HEADER</span>
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Product title</h2>
 							<ul class="list list--check tablet-hidden text-size--16">
 								<li>Free USP Episerver text here</li>
@@ -389,7 +389,7 @@
 								<li class="red"></li>
 								<li class="green"></li>
 							</ul>
-							<span class="text-size--13 font-roboto tablet-hidden">TEASER HEADER</span>
+							<span class="text-size--13 text-bold font-roboto tablet-hidden">TEASER HEADER</span>
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Product title</h2>
 							<p class="tablet-hidden">Free Episerver text description. Here you can write whatever you want to, it could be something about the terminal. Be creative :-)</p>
 						</div>
@@ -429,7 +429,7 @@
 								<li class="red"></li>
 								<li class="green"></li>
 							</ul>
-							<span class="text-size--13 font-roboto tablet-hidden">TEASER HEADER</span>
+							<span class="text-size--13 text-bold font-roboto tablet-hidden">TEASER HEADER</span>
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Product title</h2>
 							<ul class="list list--check tablet-hidden text-size--16">
 								<li>Free USP Episerver text here</li>
@@ -465,7 +465,7 @@
 								<li class="red"></li>
 								<li class="green"></li>
 							</ul>
-							<span class="text-size--13 font-roboto tablet-hidden">TEASER HEADER</span>
+							<span class="text-size--13 text-bold font-roboto tablet-hidden">TEASER HEADER</span>
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Product title</h2>
 							<ul class="list list--check tablet-hidden text-size--16">
 								<li>Free USP Episerver text here</li>
